--- a/style.css
+++ b/style.css
@@ -119,3 +119,24 @@ a:visited {
     flex-direction: column;
   }
 }
+
+/*The staff page */
+.row {
+  display: flex;
+  width: 50%;
+
+}
+
+.column {
+  flex: 50%;
+  padding: 20px !important;
+}
+
+.staff-pictures {
+  width: 50%;
+}
+
+.staffnames {
+  font-family: "Helvetica", sans-serif;
+  font-size: 20px;
+}
