--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a:visited {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
+  flex-flow: wrap;
 }
 
 .box {
@@ -94,11 +95,32 @@ a:visited {
 .box-8 {background: #beb0a7;}
 .box-9 {background: #beb0a7;}
 
-@media screen and (max-width: 800px) {
-  .schedule {
-    flex-direction: column;
+
+@@media screen and (max-width: 1200px) {
+  .box{
+    width: 40%;
   }
 }
+
+@@media screen and (max-width: 600px) {
+  .box{
+    width: 90%;
+  }
+}
+
+/* @@media (max-width: 800px) {
+  html, body{
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .schedule{
+    flex-direction: column;
+  }
+  .box{
+    flex: 100%;
+  }
+
+} */
 
 /*Home page*/
 
