--- a/style.css
+++ b/style.css
@@ -187,11 +187,15 @@ height: auto;
 .column {
   flex: 50%;
   padding: 20px !important;
+  
 }
 
 .staff-pictures {
-  width: 50%;
-}
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+  
 
 .staffnames {
   font-family: "Helvetica", sans-serif;
